# api-mocker

./: README.md  pyproject.toml
src/api_mocker/: __init__.py  cli.py  generator.py  parser.py  server.py
tests/: test_main.py
